Add exceptions. Add interface for calculator. Create unit tests. Reformat code.

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "ChumakovAnton\\Calculator\\": "tests"
+            "ChumakovAnton\\Calculator\\Test\\": "tests"
         }
     },
     "scripts": {
